--- a/editor/style.css
+++ b/editor/style.css
@@ -16,11 +16,12 @@ visualscript-main {
     display: flex; 
     align-items: center; 
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 textarea {
     width: 100%;
     height: 100%;
-    padding: 10px;
+    padding: 25px;
     /* border: none; */
 }
