--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
     margin: 0;
     overflow: hidden;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -38,7 +39,7 @@ h2 {
     border: 1px solid black;
     background: white;
     padding: 10px;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 #iterative {
